--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,34 @@
-<header>
-  <p>Página inicial de {{title}}</p>
-  <ul>
-  <li><a routerLink="">Inicio</a></li>
-  <li><a routerLink="/login">Login</a></li>
-  <li><a routerLink="/registro">Registro</a></li>
-  </ul>
-  </header>
-  <router-outlet></router-outlet>
-  <footer>
-  <p>Universidad del Quindío - 2023</p>
-  <p>De que trata esta web? {{description}}</p>
-  </footer>
+<header class="p-3 text-bg-primary">
+<div class="container">
+<div class="d-flex flex-wrap align-items-center justify-content-center
+justify-content-lg-start">
+<a routerLink="" class="d-flex align-items-center mb-2 mb-lg-0 text-white
+text-decoration-none">
+
+<i class="fa-solid fa-stethoscope fs-3"></i>
+<span class="fs-4 ms-3 me-3">{{title}}</span>
+</a>
+<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+<li><a routerLink="" class="nav-link px-2 text-white">Inicio</a></li>
+<li><a routerLink="" class="nav-link px-2 text-white">Gestión médicos</a></li>
+<li><a routerLink="" class="nav-link px-2 text-white">Gestión PQRS</a></li>
+<li><a routerLink="" class="nav-link px-2 text-white">Gestión Citas</a></li>
+</ul>
+<div class="text-end">
+<button type="button" routerLink="/login" class="btn btn-outline-light
+
+me-2">Login</button>
+
+<button type="button" routerLink="/registro" class="btn
+
+btn-success">Sign-up</button>
+</div>
+</div>
+</div>
+</header>
+<div class="seccion-pagina p-4">
+<div class="container">
+<router-outlet></router-outlet>
+</div>
+</div>
+<div class="container">
