--- a/src/app/pagina/registro/registro.component.html
+++ b/src/app/pagina/registro/registro.component.html
@@ -1,78 +1,124 @@
-<form #f="ngForm" (ngSubmit)="registrar()">
-    <div>
-      <label>Cédula: </label>
-      <input type="text" name="cedula" [(ngModel)]="registroPacienteDTO.cedula" required="true" maxlength="10" minlength="8"/>
+<div class="card">
+   <div class="card-header ps-5 pt-4 pb-4">
+   <h5 class="mb-0" ><i class="fa-solid fa-user-plus me-3"></i>Registro de un nuevo
+    paciente</h5>
+   </div>
+  
+  <div class="card-body p-5">
+
+   <form #f="ngForm" (ngSubmit)="registrar()">
+
+
+    <div class="mb-3 row">
+      
+      <label class="col-sm-2 col-form-label">Cédula: </label>
+      <div class="col-sm-10">
+      <input #cedula="ngModel"  [ngClass]="cedula.invalid && (cedula.dirty || cedula.touched) ? 'is-invalid' : ''" type= "text" name="cedula"  class="form-control" [(ngModel)]="registroPacienteDTO.cedula" required="true" maxlength="10" minlength="8"/>
+      </div>
+
     </div>
     
-    <div>
-      <label>Nombre: </label>
-      <input type="text" name="nombre" [(ngModel)]="registroPacienteDTO.nombre" required="true" maxlength="200"/>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Nombre: </label>
+      <div class="col-sm-10">
+      <input #nombre="ngModel"  [ngClass]="nombre.invalid && (nombre.dirty || nombre.touched) ? 'is-invalid' : ''" type="text" name="nombre" [(ngModel)]="registroPacienteDTO.nombre" required="true" maxlength="200"/>
+      </div>
     </div>
     
-    <div>
-      <label>Teléfono: </label>
-      <input type="text" name="telefono" [(ngModel)]="registroPacienteDTO.telefono" required="true" maxlength="20" minlength="6" />
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Teléfono: </label>
+      <div class="col-sm-10">
+      <input #telefono="ngModel"  [ngClass]="telefono.invalid && (telefono.dirty || telefono.touched) ? 'is-invalid' : ''" type="text" name="telefono" [(ngModel)]="registroPacienteDTO.telefono" required="true" maxlength="20" minlength="6" />
+      </div>
     </div>
-    
-    <div>
-      <label>Foto: </label>
-      <input type="file" (change)="onFileChange($event)" required="true" />
+
+
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Foto: </label>
+      <div class="col-sm-10">
+        <input type="file" name="urlFoto" class="form-control" required
+        (change)="onFileChange($event)" />
+      </div>
     </div>
-    
-    <div>
-      <label>Ciudad: </label>
-      <select name="ciudad" required="true" [(ngModel)]="registroPacienteDTO.ciudad" >
+
+
+    <div class="mb-3 row">
+
+      <label class="col-sm-2 col-form-label">Ciudad: </label>
+      <div class="col-sm-10">
+       <select name="ciudad" required class="form-select" [(ngModel)]="registroPacienteDTO.ciudad" >
         <option value="" selected >Seleccione una ciudad</option>
         <option [value]="item" *ngFor="let item of ciudades; index as i" >{{item}}</option>
-        </select>
+       </select>
+     </div>
+    </div>
+    
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Fecha de nacimiento: </label>
+      <div class="col-sm-10">
+      <input #fechaNacimiento="ngModel"  [ngClass]="fechaNacimiento.invalid && (fechaNacimiento.dirty || fechaNacimiento.touched) ? 'is-invalid' : ''" type="date" name="fechaNacimiento" [(ngModel)]="registroPacienteDTO.fechaNacimiento" required="true" />
+      </div>
+    </div>
+    
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Alergias: </label>
+      <div class="col-sm-10">
+      <input #alergias="ngModel"  [ngClass]="alergias.invalid && (alergias.dirty || alergias.touched) ? 'is-invalid' : ''" type="text" name="alergias" [(ngModel)]="registroPacienteDTO.alergias" required="true" />
+    </div>
     </div>
     
     <div>
-      <label>Fecha de nacimiento: </label>
-      <input type="date" name="fechaNacimiento" [(ngModel)]="registroPacienteDTO.fechaNacimiento" required="true" />
-    </div>
-    
-    <div>
-      <label>Alergias: </label>
-      <input type="text" name="alergias" [(ngModel)]="registroPacienteDTO.alergias" required="true" />
-    </div>
-    
-    <div>
-      <label>EPS: </label>
-      <select name="eps" required="true" [(ngModel)]="registroPacienteDTO.eps" >
+      <label class="col-sm-2 col-form-label"> EPS: </label>
+      <div class="col-sm-10">
+       <select name="eps" required class="form-select" [(ngModel)]="registroPacienteDTO.eps" >
         <option value="" selected >Seleccione una EPS</option>
         <option [value]="item" *ngFor="let item of epss; index as i" >{{item}}</option>
         </select>
-      
+      </div>
     </div>
     
     <div>
-        <label>Tipo de sangre: </label>
-        <select name="tipoSangre" required="true" [(ngModel)]="registroPacienteDTO.tipoSangre" >
+      <label class="col-sm-2 col-form-label"> Tipo de sangre: </label>
+      <div class="col-sm-10">
+        <select name="tipoSangre" required class="form-select" [(ngModel)]="registroPacienteDTO.tipoSangre" >
           <option value="" selected >Seleccione un tipo de sangre</option>
           <option [value]="item" *ngFor="let item of tiposSangre; index as i" >{{item}}</option>
           </select>
         
+      </div>
     </div>
         
-    <div>
-        <label>Correo electrónico: </label>
-        <input type="email" name="correo" [(ngModel)]="registroPacienteDTO.correo" email="true" required="true" maxlength="80"/>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Correo electrónico: </label>
+      <div class="col-sm-10">
+        <input #correo="ngModel"  [ngClass]="correo.invalid && (correo.dirty || correo.touched) ? 'is-invalid' : ''"  type="email" name="correo" [(ngModel)]="registroPacienteDTO.correo" email="true" required="true" maxlength="80"/>
+      </div>
     </div>
         
-    <div>
-        <label>Contraseña: </label>
-        <input type="password" name="password" [(ngModel)]="registroPacienteDTO.password" required="true" />
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Contraseña: </label>
+      <div class="col-sm-10">
+        <input #password="ngModel"  [ngClass]="password.invalid && (password.dirty || password.touched) ? 'is-invalid' : ''" type="password" name="password" [(ngModel)]="registroPacienteDTO.password" required="true" />
+      </div>
     </div>
 
-    <div>
-      <label >Repetir contraseña: </label>
-      <input type="password" name="confirmaPassword"
-      [(ngModel)]="registroPacienteDTO.confirmaPassword" required />
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label"> Repetir contraseña: </label>
+      <div class="col-sm-10">
+        <input #password="ngModel"  [ngClass]="password.invalid && (password.dirty || password.touched) ? 'is-invalid' : ''"  type="password" name="confirmaPassword"
+         [(ngModel)]="registroPacienteDTO.confirmaPassword" required />
+      </div>
     </div>
 
-    <p *ngIf="!sonIguales()" >Las contraseñas no coinciden</p>
+    <div class="alert alert-danger" role="alert" *ngIf="!sonIguales()" >Las contraseñas no coinciden</div>
         
-    <button type="submit" [disabled]="f.invalid || !sonIguales()">Registrarse</button>
+    <button class="btn btn-primary" type="submit" [disabled]="f.invalid || !sonIguales()">
+      <i class="fa-solid fa-circle-plus me-1"></i>Registrarse
+    </button>
 
-</form>
+    </form>
+
+     </div>
+    
+    
+</div>
